--- a/client/app/views/conflictosalumnos/list.html
+++ b/client/app/views/conflictosalumnos/list.html
@@ -14,9 +14,9 @@
             <td style="width:30px;">
               <span class="fa fa-square  fa-lg tc-blue-grey-50" ng-class="{'fa-check-square tc-{{$root.color.accent}}-500':item.active}"></span>
             </td>
-            <td class="text-left" data-title="'Alumno'" sortable="_alumno" filter="{'_alumno':'text'}">{{item._alumno}}</td>
-            <td class="text-left" data-title="'Conflicto'" sortable="_conflicto" filter="{'_conclicto':'text'}">{{item._conflicto}}</td>
-            <td class="text-left" data-title="'Estado'" sortable="estado" filter="{'estado':'select'}" filter-data="estados">{{item.estado}}</td>
+            <td class="text-left" data-title="'Alumno'" sortable="_alumno" filter="{'_alumno':'text'}">{{item._alumno.codigoUniversitario}}</td>
+            <td class="text-left" data-title="'Conflicto'" sortable="_conflicto" filter="{'_conclicto':'text'}">{{item._conflicto.nombre}}</td>
+            <td class="text-left" data-title="'Estado'" sortable="estado" filter="{'estado':'select'}" filter-data="estadosFilter">{{item.estado}}</td>
           </tr>
         </tbody>
       </table>
