--- a/client/app/views/matricula/inscripcion-form.html
+++ b/client/app/views/matricula/inscripcion-form.html
@@ -45,11 +45,11 @@
               </tbody>
             </table>
           </div>
-          <!-- fin de pestañas -->
+
         </md-content>
       </div>
     </md-dialog-content>
-    <button ng-if="addMode" class="btn btn-success btn-block btn-inscription" ng-click="addCursos()">Agregar Cursos</button>
-    <button ng-if="updateMode" class="btn btn-success btn-block col-md-3 btn-inscription" ng-click="addCursos()">Actualizar Curso</button>
+    <button ng-if="addMode" class="btn btn-success btn-block btn-inscription" ng-click="addCursos()">Actualizar Matrícula</button>
+    <button ng-if="updateMode" class="btn btn-success btn-block col-md-3 btn-inscription" ng-click="addCursos()">Actualizar Matrícula</button>
   </form>
 </md-dialog>
