--- a/client/app/views/matricula/inscripcion-form.html
+++ b/client/app/views/matricula/inscripcion-form.html
@@ -12,48 +12,6 @@
     <md-dialog-content class="window-modal-content-lg">
       <div layout="row" layout-align="center start" layout-margin layout-fill>
         <md-content flex class="md-padding page-content" style="max-width:1020px;">
-<!-- <<<<<<< HEAD -->
-            <!-- <div class="table-responsive">
-              <table ng-table="tableParams" show-filter="false" class="table table-hover table-condensed table-striped table-bordered "> -->
-                <!-- En la mayoria de los casos solo sera necesario agregar o modificar la información de las columnas -->
-                <!-- <tbody ng-repeat="group in $groups">
-                  <tr class="ng-table-group">
-                    <td colspan="2">
-                      <a href class="groupTitle" ng-click="group.$hideRows = !group.$hideRows">
-                        <span class="fa" ng-class="{ 'fa-chevron-right': group.$hideRows, 'fa-chevron-down': !group.$hideRows }"></span>
-                        <strong>Ciclo: {{group.value}} </strong>
-                      </a>
-                    </td>
-                    <td><strong>TOTAL</strong></td>
-                    <td><strong>{{getCreditosCiclo(group.data)}}</strong></td>
-                    <td><strong>{{getHorasCiclo(group.data)}}</strong></td>
-                    <td colspan="{{$columns.length-5}}"></td>
-                  </tr>
-                  <tr ng-hide="group.$hideRows" ng-repeat="item in group.data" ng-click="item.active=!item.active;EnabledEdit(item,$groups)">
-                    <td style="width:30px;">
-                      <span class="fa fa-square  fa-lg tc-blue-grey-50" ng-class="{'fa-check-square tc-{{$root.color.accent}}-500':item.active}"></span>
-                    </td>
-                    <td class="text-left" data-title="'Curso'" sortable="curso">{{item._curso.nombre}}</td>
-                    <td data-title="'Código'" sortable="codigo" filter="{ 'codigo': 'text' }">{{item._curso.codigo}}</td>
-                    <td data-title="'N° Creditos'">{{item.creditos}}</td>
-                    <td data-title="'N° Horas'">{{item.horas_total}}</td>
-                    <td data-title="'N° Horas Teoria'">{{item.horas_teoria}}</td>
-                    <td data-title="'N° Horas Práctica'">{{item.horas_practica}}</td>
-                    <td data-title="'N° Horas Laboratorio'">{{item.horas_laboratorio}}</td>
-                    <td data-title="'Estado'">
-                      <strong>
-                          <a href  title="{{item.aprobacioncursosperiodo}}" >
-                            <span ng-if="item._aprobacionesPeriodo.length==0" class="fa fa-times tc-blue-grey-500" title="No Dictado"></span>
-                            <span ng-if="item._aprobacionesPeriodo.length>0" class="fa fa-check-circle tc-green-500" title="Dictado"></span>
-                          </a>
-                        </strong>
-                    </td>
-                  </tr>
-                </tbody>
-                <tbody>
-              </table>
-            </div> -->
-<!-- ======= -->
           <div class="table-responsive">
             <table ng-table="tableParams" show-filter="false" class="table table-hover table-condensed table-striped table-bordered ">
               <!-- En la mayoria de los casos solo sera necesario agregar o modificar la información de las columnas -->
@@ -87,12 +45,10 @@
               </tbody>
             </table>
           </div>
-<!-- >>>>>>> 6465471a73e81055ffef03945617b0fd57994ab1 -->
-          <!-- fin de pestañas -->
         </md-content>
       </div>
     </md-dialog-content>
-    <button ng-if="addMode" class="btn btn-success btn-block btn-inscription" ng-click="addCursos()">Agregar Cursos</button>
-    <button ng-if="updateMode" class="btn btn-success btn-block col-md-3 btn-inscription" ng-click="addCursos()">Actualizar Curso</button>
+    <button ng-if="addMode" class="btn btn-success btn-block btn-inscription" ng-click="addCursos()">Actualizar Matrícula</button>
+    <button ng-if="updateMode" class="btn btn-success btn-block col-md-3 btn-inscription" ng-click="addCursos()">Actualizar Matrícula</button>
   </form>
 </md-dialog>
