Comprobar matricula, seleccionar vista de matricula

--- a/client/app/views/home/home_alumno.html
+++ b/client/app/views/home/home_alumno.html
@@ -6,7 +6,7 @@
 
         <div layout="row" layout-sm="column">
           <div class="dashboard display-animation" flex="67" flex-sm="100">
-            <a href class="tile tile-lg bgc-white ripple-effect " ui-sref="app.facultad">
+            <a href class="tile tile-lg bgc-white ripple-effect " ui-sref="app.matricularevision">
               <span class="content-wrapper">
               <span class="tile-content">
                 <span class="tile-img bgc-teal-300" style="background-image: url(images/bghome-1.jpg);background-size:cover;"></span>
