--- a/client/app/views/matricula/revision.html
+++ b/client/app/views/matricula/revision.html
@@ -90,7 +90,7 @@
 
        </md-content>
 
-<div layout="row" layout-fill ng-if="UI.nextStage1&&UI.nextStage2" ng-click="RegisterMatricula()" >
+<div layout="row" layout-fill ng-if="UI.nextStage1&&UI.nextStage2" ng-click="Save()" >
    <a href="#/home/matricula/inscripcion" ui-sref="app.matriculainscripcion">
  <button class="md-button" style="background-color: rgb(255,152,0);color:white;text-align:center;padding: 5px;">Iniciar el proceso de matricula</button>
  </a>
