Comprobar matricula, seleccionar vista de matricula

--- a/client/app/views/matricula/revision.html
+++ b/client/app/views/matricula/revision.html
@@ -78,7 +78,7 @@
    <strong>No es posible iniciar el proceso de matricula</strong>
  </div>
 
-<div layout="row" layout-fill ng-if="UI.nextStage1&&UI.nextStage2" ng-click="RegisterMatricula()" >
+<div layout="row" layout-fill ng-if="UI.nextStage1&&UI.nextStage2" ng-click="Save()" >
    <a href="#/home/matricula/inscripcion" ui-sref="app.matriculainscripcion">
  <button class="md-button" style="background-color: rgb(255,152,0);color:white;text-align:center;padding: 5px;">Iniciar el proceso de matricula</button>
  </a>
