--- a/client/app/views/planestudiodetalles/form.html
+++ b/client/app/views/planestudiodetalles/form.html
@@ -36,6 +36,17 @@
                 </div>
                 <div flex-item>
                   <md-input-container class="md-block">
+                    <label>Código</label>
+                    <input required name="codigodetalle" ng-model="model.codigo">
+
+                    <div ng-messages="myForm.codigodetalle.$error"  ng-if="submited">
+                      <div ng-message="required">{{message.Required}}</div>
+                    </div>
+                  </md-input-container>
+                </div>
+                <div flex-item>
+
+                  <md-input-container class="md-block">
                     <label>Ciclo</label>
                     <input required name="ciclo" ng-model="model.ciclo">
                     <div ng-messages="myForm.ciclo.$error"  ng-if="submited">
@@ -124,7 +135,7 @@
                     <div ng-message="required">{{message.Required}}</div>
                   </div>
                 </md-input-container-->
-                <md-autocomplete flex required
+                <md-autocomplete flex
                   md-input-name="requisito"
                   md-input-minlength="2"
                   md-input-maxlength="50"
