Conflictos Alumnos - Cambios autocomplete

--- a/client/app/views/conflictosalumnos/list.html
+++ b/client/app/views/conflictosalumnos/list.html
@@ -14,8 +14,8 @@
             <td style="width:30px;">
               <span class="fa fa-square  fa-lg tc-blue-grey-50" ng-class="{'fa-check-square tc-{{$root.color.accent}}-500':item.active}"></span>
             </td>
-            <td class="text-left" data-title="'Alumno'" sortable="_alumno" filter="{'_alumno':'text'}">{{item._alumno.codigo}}</td>
-            <td class="text-left" data-title="'Conflicto'" sortable="_conflicto" filter="{'_conclicto':'text'}">{{item._alumno._persona.nombreCompleto}}</td>
+            <td class="text-left" data-title="'Alumno'" sortable="_alumno" filter="{'_alumno':'text'}">{{item._alumno._persona.nombreCompleto}}</td>
+            <td class="text-left" data-title="'Conflicto'" sortable="_conflicto" filter="{'_conclicto':'text'}">{{item._conflicto.nombre}}</td>
             <td class="text-left" data-title="'Estado'" sortable="estado" filter="{'estado':'select'}" filter-data="estadosFilter">{{item.estado}}</td>
           </tr>
         </tbody>
