--- a/client/app/views/conflictosalumnos/form.html
+++ b/client/app/views/conflictosalumnos/form.html
@@ -11,52 +11,40 @@
     </md-toolbar>
     <md-dialog-content class="window-modal-content-sm">
       <div flex layout="row" layout-sm="row">
-          <div flex>
-              <md-input-container class="md-block">
-                  <label>Facultad</label>
-                  <md-select ng-model="model._facultad" ng-model-options="{trackBy: '$value._id'}" ng-change="LoadEcuelas()">
-                    <md-option ng-repeat="fac in facultades" ng-value="fac">
-                      {{fac.nombre}}
-                    </md-option>
-                  </md-select>
-              </md-input-container>
-          </div>
-      </div>
-      <div flex layout="row" layout-sm="row">
-          <div flex>
-              <md-input-container class="md-block">
-                  <label>Escuela</label>
-                  <md-select ng-model="model._escuela" ng-model-options="{trackBy: '$value._id'}">
-                    <md-option ng-repeat="escuela in escuelas" ng-value="escuela">
-                      {{escuela.nombre}}
-                    </md-option>
-                  </md-select>
-              </md-input-container>
-          </div>
-          <div flex>
-              <md-input-container class="md-block">
-                <label>Periodo</label>
-                <md-select ng-model="model._periodo" ng-model-options="{trackBy: '$value._id'}" ng-change="ListAlumnos()">
-                  <md-option ng-repeat="periodo in periodos" ng-value="periodo">
-                    {{periodo.nombre}}
-                  </md-option>
-                </md-select>
-              </md-input-container>
-          </div>
-      </div>
-      <div flex layout="row" layout-sm="row">
         <div flex>
-          <md-input-container class="md-block">
-            <label>Alumno</label>
-            <md-select ng-model="model._alumno" name="alumno" required>
-              <md-option ng-repeat="al in alumnos" ng-value="al">
-                {{al._persona.nombres + ' ' + al._persona.apellidoPaterno + ' ' + al._persona.apellidoMaterno}}
-              </md-option>
-            </md-select>
-            <div ng-messages="myForm._alumno.$error" ng-if="submited">
-              <div ng-message="required">{{message.Required}}</div>
-            </div>
-          </md-input-container>
+            <md-autocomplete flex
+              md-input-name="alumno"
+              md-input-minlength="2"
+              md-input-maxlength="50"
+              md-selected-item="_alumno"
+              md-search-text="ctrl.searchText"
+              md-items="alumn in FilterAlumnos(ctrl.searchText)"
+              md-item-text="alumno._persona.nombreCompleto"
+              md-floating-label="Alumno"
+              md-menu-class="autocomplete-custom-template">
+                <md-item-template>
+                    <span class="item-title">
+                        <md-icon md-font-icon="fa fa-book"></md-icon>
+                        <span> {{alumno._persona.nombre}} </span>
+                    </span>
+                    <span class="item-metadata">
+                        <span class="item-metastat">
+                            <strong>Código</strong> {{alumno.codigo}};
+                        </span>
+                        <span class="item-metastat">
+                            <strong>Facultad</strong> {{alumno._facultad}};
+                        </span>
+                        <span class="item-metastat">
+                            <strong>Escuea</strong> {{alumno._escuela}}
+                        </span>
+                    </span>
+                </md-item-template>
+                <div ng-messages="myForm.requisito.$error" ng-if="myForm.requisito.$touched">
+                    <div ng-message="required">{{message.Required}}</div>
+                    <div ng-message="minlength">Texto demasiado corto</div>
+                    <div ng-message="maxlength">Texto demasiado largo</div>
+                </div>
+            </md-autocomplete>
         </div>
       </div>
       <div flex layout="row" layout-sm="row">
