--- a/client/app/views/conflictosalumnos/form.html
+++ b/client/app/views/conflictosalumnos/form.html
@@ -71,7 +71,7 @@
                 <md-item-template>
                     <span class="item-title">
                         <md-icon md-font-icon="fa fa-book"></md-icon>
-                        <span> {{ alumno._persona.nombres }} </span>
+                        <span> {{ alumno._persona.nombreCompleto }} </span>
                     </span>
                     <span class="item-metadata">
                         <span class="item-metastat">
