--- a/client/app/views/matricula/revision.html
+++ b/client/app/views/matricula/revision.html
@@ -1,13 +1,13 @@
 <md-content class="page-content" layout-align="center start" style="background-color:#f2f2f2">
   <md-subheader class="md-primary " style="margin-right: 0">
-    <h3>{{UI.title}}</h3>
+    <h3>Matrícula {{periodoNombre }}</h3>
   </md-subheader>
 
   <div layout="row" layout-align="center start" layout-margin layout-fill>
     <md-content flex class="md-padding page-content md-whiteframe-4dp" style="max-width:1020px;">
       <section>
         <md-subheader >
-          <strong>{{ UI.title }}</strong>
+          <strong>Matrícula {{periodoNombre }}</strong>
         </md-subheader>
         <div class="md-primary md-12-line">
           <md-list layout="column" layout-padding>
@@ -80,7 +80,8 @@
 
 <div layout="row" layout-fill ng-if="UI.nextStage1&&UI.nextStage2" ng-click="Save()" >
   <div class="text-center" flex>
-    <a href="#/home/matricula/inscripcion" ui-sref="app.matriculainscripcion">
+     <!-- <a href="#/home/matricula/inscripcion" ui-sref="app.matriculainscripcion"> -->
+    <a>
   <button ui-sref="app.matriculainscripcion" class="md-button" style="background-color: rgb(255,152,0);color:white;text-align:center;padding: 5px;">Iniciar el proceso de matricula</button>
   </a>
   </div>
