Correcion mensaje de actualizacion de datos

--- a/client/app/views/home/home_alumno.html
+++ b/client/app/views/home/home_alumno.html
@@ -1,6 +1,6 @@
 <md-content class="page-content" layout-align="center start" style="background-color:#f2f2f2;">
   <md-subheader class="md-primary " style="margin-right: 0">
-    <h3><span class="fa fa-home"></span> Bienvenido al Sistema de Matrícula</h3>
+    <h3><span class="fa fa-home"></span> Bienvenido al Sistema de Matrícula <small ng-if="!aproved" class="tc-{{$root.color.accent}}-500"><span class="fa fa-exclamation-circle"></span> Es necesario que actualice sus datos personales antes de continuar con el proceso de matrícula</small></h3>
   </md-subheader>
   <md-content flex style="max-width:1020px;margin:auto;">
 
@@ -104,11 +104,7 @@
         </a>
       </div>
     </div>
-    <div layout="row" layout-sm="column" ng-if="!aproved">
-      <div class="msg-advice">
-        <span class="msg-title">ACTUALIZAR LOS DATOS DEL ALUMNO PARA CONTINUAR</span>
-      </div>
-    </div>
+
   </md-content>
 
 </md-content>
